acrescentadas as funçoes de addBalance, getBalance, getStatement. Melhorias na estruturaçao dos dados no BD e do codigo na API. Primeiro esboco do backend finalizado.
