# routes/BankingRoutes.ts
@@ -5,4 +5,7 @@ export const bankingRoutes = Router();
 const bankingController = new BankingController();
 
 bankingRoutes.post("/createAccount", bankingController.createAccount);
-bankingRoutes.get("/getAccount", bankingController.getAccount);
+bankingRoutes.get("/getAccounts", bankingController.getAccounts);
+bankingRoutes.post("/addBalance", bankingController.addBalance);
+bankingRoutes.get("/getBalance/:accountId", bankingController.getBalance);
+bankingRoutes.get("/getStatement/:accountId", bankingController.getStatement);
